fixed action on form

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="col-lg-4 text-center"></div>
         <div class="col-lg-4 text-center">
 
-          <form action="#" onsubmit="callTlsChecker()">
+          <form action="javascript:void(0);" onsubmit="callTlsChecker()">
             <div class="form-group">
               <label for="host">Host or FQDN:</label>
               <input type="host" class="form-control" id="host" value="bing.com">
