--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
          cell1.appendChild(textnode1);
          cell2.appendChild(textnode2);
          cell3.appendChild(textnode3);
+         if (supported == false) {cell3.style.color='red';} else {cell3.style.color='green';}
          row.appendChild(cell1);
          row.appendChild(cell2);
          row.appendChild(cell3);
@@ -58,8 +59,12 @@
           document.getElementById("resultsTable").deleteRow(i -1);
         }
 
+
         var xhr = new XMLHttpRequest();
         xhr.open("GET", url, true);
+       
+
+
         xhr.send();
 
         xhr.onload = function() {
@@ -138,7 +143,11 @@
         </div>
         <div class="col-lg-4 text-center"></div>
       </div>
-      <br/>
+      <div class="row">
+        <div class="col-lg-12 text-center">
+            <!--<progress id="progress" value="0"></progress>-->
+        </div>
+      </div>
       <div class="row">
           <div class="col-lg-12 text-center">
               <table class="table table-dark" id="resultsTable">
