--- a/index.html
+++ b/index.html
@@ -28,6 +28,34 @@
 
     <!-- JavaScript -->
     <script>
+
+      function filterTable() {
+        // Declare variables 
+        var input, filter, table, tr, td, i;
+        input = document.getElementById("myInput");
+        filter = input.value.toUpperCase();
+        table = document.getElementById("resultsTable");
+        tr = table.getElementsByTagName("tr");
+
+          // Loop through all table rows, and hide those who don't match the search query
+        for (i = 0; i < tr.length; i++) {
+          td = tr[i].getElementsByTagName("td");
+          for (cell = 0; cell < td.length; cell++) {
+            if (td[cell]) {
+              if (td[cell].innerHTML.toUpperCase().indexOf(filter) > -1) {
+                tr[i].style.display = "";
+                break;
+              } else {
+                tr[i].style.display = "none";
+              }
+            }
+          } 
+        }
+      }
+      
+
+
+
       function addRow(protocol,ciphersuite,supported)
       {
          if (!document.getElementsByTagName) return;
@@ -143,11 +171,15 @@
         </div>
         <div class="col-lg-4 text-center"></div>
       </div>
+      <br />
       <div class="row">
-        <div class="col-lg-12 text-center">
-            <!--<progress id="progress" value="0"></progress>-->
+        <div class="col-lg-4 text-center"></div>
+        <div class="col-lg-4 text-center">
+            <input type="text" id="myInput" onkeyup="filterTable()" placeholder="Filter..">
         </div>
+        <div class="col-lg-4 text-center"></div>
       </div>
+      <br />
       <div class="row">
           <div class="col-lg-12 text-center">
               <table class="table table-dark" id="resultsTable">
